# inkdown

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: publish-release.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  parser.rs  sync.rs
src/components/: CommandPalette.tsx  GraphView.tsx  StatusBar.tsx  WelcomeScreen.tsx
src/components/editor/: AIToolbar.tsx  MarkdownEditor.tsx  ReadingView.tsx  TabBar.tsx  wikilinkExtension.ts
src/components/rightsidebar/: AIPanel.tsx  BacklinksPanel.tsx  OutlinePanel.tsx  RightSidebar.tsx
src/components/settings/: AISettings.tsx  SettingsModal.tsx  SyncSettings.tsx
src/components/sidebar/: BookmarksPanel.tsx  FileTree.tsx  SearchPanel.tsx  Sidebar.tsx  TagsPanel.tsx
src/hooks/: useTheme.ts
src/services/: ai.ts  webdav.ts
src/stores/: useAIStore.ts  useAppStore.ts  useSyncStore.ts
src/styles/: globals.css
