[package]
name = "inkdown"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "inkdown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
trash = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
regex = "1"
once_cell = "1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
quick-xml = "0.36"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
jieba-rs = "0.7"
